--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "contentful": "^7.14.6",
+    "history": "^5.0.0",
     "jss-rtl": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
